--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Blender
       run: |
         sudo apt-get update
-        sudo apt-get install -y blender=3.0.1
+        sudo apt-get install -y blender
 
     - name: Run Blender script
       run: |
