--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Blender
         run: |
           wget https://www.blender.org/download/release/Blender4.2/blender-4.2.0-linux-x64.tar.xz/
-          tar xvf blender-3.5-linux-x86_64.tar.xz
+          tar xvf blender-4.2.0-linux-x64.tar.xz
           export PATH="$PATH:/path/to/blender/blender"
 
      
