--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -19,6 +19,7 @@ jobs:
       # Install Blender (replace with your preferred method)
       - name: Install Blender
         run: |
+          pwd
           wget -c -O blender-4.2.0-linux-x64 https://ftp.halifax.rwth-aachen.de/blender/release/Blender4.2/blender-4.2.0-linux-x64.tar.xz
           mkdir /home/runner/work/chaitany
           tar -xvf blender-4.2.0-linux-x64 -C /home/runner/work/chaitany
