--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -21,11 +21,9 @@ jobs:
         run: |
           pwd
           wget -c -O blender-4.2.0-linux-x64 https://ftp.halifax.rwth-aachen.de/blender/release/Blender4.2/blender-4.2.0-linux-x64.tar.xz
-          # mkdir /home/runner/work/chaitany
           tar -xvf blender-4.2.0-linux-x64
-          echo "PARTY"
           cd blender-4.2.0-linux-x64
-          echo "something"
+          echo "Something"
           pwd
           ls
 
