--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -32,7 +32,7 @@ jobs:
           cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           # ls
           # python -m pip install --upgrade pip
-          python3.11 -m pip install scipy
+          python -m pip install scipy
      
       - name: Install Addon
         run: python install_plugin.py
