Main: Install Scipy 5 (i)

--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -32,7 +32,8 @@ jobs:
           cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           # ls
           # python -m pip install --upgrade pip
-          python -m pip install scipy
+          sudo apt-get install python3-scipy 
+          # python -m pip install scipy
      
       - name: Install Addon
         run: python install_plugin.py
