--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -29,8 +29,19 @@ jobs:
       
       - name: Install Scipy
         run: |
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin install scipy
-     
+          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
+          python
+          pip install scipy
+
+          # export /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
+          # cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
+          # # ls
+          # # python -m pip install --upgrade pip
+          # sudo apt-get install python3-scipy 
+          # # python -m pip install scipy
+
+
+
       - name: Install Addon
         run: python install_plugin.py
 
