--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -29,9 +29,9 @@ jobs:
       
       - name: Install Scipy
         run: |
-          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
-          python
-          pip install scipy
+          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python
+          # cd 
+          python -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
 
           # export /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           # cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
