--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -26,16 +26,8 @@ jobs:
       
       - name: Install Scipy
         run: |
-          cd /home/runner/work/github-trial/github-trial
-          echo Bhai
-          ls
-          cd blender-4.2.0-linux-x64/4.2
-          echo Hai
-          ls
-          cd python/bin
-          echo Tu
-          ls
-           
+          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python3.11.exe
+                     
           python -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
 
           # export /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
