--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -26,9 +26,11 @@ jobs:
       
       - name: Install Scipy
         run: |
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python3.11.exe
-                     
-          python -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+          # cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python3.11.exe
+          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
+          python3.11 -m pip install --upgrade pip
+            
+          python3.11 -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
 
           # export /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           # cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
