--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -32,6 +32,11 @@ jobs:
         run: |
           cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           python -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+      
+      - name: Show
+        run: |
+          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages
+          ls
 
       - name: Install Addon
         run: python install_plugin.py
