--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -15,13 +15,16 @@ jobs:
           wget https://download.blender.org/release/Blender4.2/blender-4.2.0-linux-x64.tar.xz
           tar -xf blender-4.2.0-linux-x64.tar.xz
           ls -la blender-4.2.0-linux-x64
+          pwd
 
       - name: Install Python dependencies (if needed)
         run: |
+          pwd
           python -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
 
       - name: Install Blender Addon from .zip
         run: |
+          pwd
           cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           ./blender --background --python-expr "
           import bpy
