--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -29,13 +29,20 @@ jobs:
           echo "
           import bpy
           import os
+          import time
 
+          time.sleep(5)  # Add delay to ensure Blender initializes
+          
           addon_path = '/home/runner/work/github-trial/github-trial/animation_tool.zip'
           print(f'Installing addon from {addon_path}')
-          bpy.ops.wm.addon_install(filepath=addon_path)
-          bpy.ops.wm.addon_enable(module='animation_tool')
-          bpy.ops.wm.save_userpref()
-          print('Addon installed successfully')
+          
+          if os.path.exists(addon_path):
+              bpy.ops.wm.addon_install(filepath=addon_path)
+              bpy.ops.wm.addon_enable(module='animation_tool')
+              bpy.ops.wm.save_userpref()
+              print('Addon installed successfully')
+          else:
+              print(f'Addon path {addon_path} does not exist!')
           " > install_addon.py
 
       - name: Run install_addon.py in Blender
