--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -37,7 +37,7 @@ jobs:
        
 
           bpy.ops.preferences.addon_install(filepath=addon_path)
-          addon_name = "animation_tool"
+          addon_name = "Metadata Beta 1.5.2"
           bpy.ops.preferences.addon_enable(module=addon_name)
           " > install_addon.py
 
