--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -42,5 +42,7 @@ jobs:
 
       - name: Run install_addon.py in Blender
         run: |
+          cd /home/runner/work/github-trial/github-trial/
+          ls
           cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64
           ./blender --background --python ../install_addon.py
