--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -37,7 +37,7 @@ jobs:
        
 
           bpy.ops.preferences.addon_install(filepath=addon_path)
-          bpy.ops.preferences.addon_enable(module="animation_tool")
+          bpy.ops.preferences.addon_enable(module="Metadata Beta 1.5.2")
           " > install_addon.py
 
       - name: Run install_addon.py in Blender
