--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -14,14 +14,16 @@ jobs:
         run: |
           wget https://download.blender.org/release/Blender4.2/blender-4.2.0-linux-x64.tar.xz
           tar -xf blender-4.2.0-linux-x64.tar.xz
-          ls -la blender-4.2.0-linux-x64
       
       - name: Install Python dependencies (if needed)
         run: |
-          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
+          cd /home/runner/work/github-trial
+          ls
           pwd
-          python -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
-          echo "BUNYT"
+          cd /home/runner/work/github-trial/github-trial
+          ls
+          pwd
+          /blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "/home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
           pwd
       
       
