--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -17,7 +17,7 @@ jobs:
       
       - name: Install Python dependencies (if needed)
         run: |
-          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64
+          cd /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin
           ls
           pwd
           cd /home/runner/work/github-trial/blender-4.2.0-linux-x64/blender-4.2.0-linux-x64/4.2/python/bin
