--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           pwd
           ls
-          cd blender-4.2.0-linux-x64
+          cd blender-4.2.0-linux-x64/4.2/python/bin
           echo "Helllo"
           ls
 
