--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -18,5 +18,9 @@ jobs:
       - name: Install Python Scipy
         run: |
           pwd
-          blender-4.2.0-linux-x64/4.2/python/bin/python3.11 bunty.py
+          blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+
+          echo "SPACE"
+          cd blender-4.2.0-linux-x64/4.2/python/lib/site-packages
+          ls
           
