--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -18,16 +18,24 @@ jobs:
       - name: Install Python Scipy
         run: |
           pwd
-          blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+
           #Update pip
           /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --upgrade pip
+
+          blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+          
           echo "SPACE"
           cd blender-4.2.0-linux-x64/4.2/python/lib/site-packages
           ls
         
       - name: Download Animation Toop .zip file
         run: |
-          pwd  
-          wget https://github.com/BotLabDynamics/animation_tool/archive/refs/heads/main.zip
-          ls
+          pwd
+
+          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
+          import bpy
+
+          bpy.ops.preferences.addon_install(filepath="/home/runner/work/github-trial/github-trial/")
+          bpy.ops.preferences.addon_enable(module="animation_tool")"
+          
           
