--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -35,7 +35,9 @@ jobs:
           /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
           import bpy
 
-          bpy.ops.preferences.addon_install(filepath="/home/runner/work/github-trial/github-trial/animation_tool.zip")
+          path_to_zip=r"/home/runner/work/github-trial/github-trial/"
+
+          bpy.ops.preferences.addon_install(filepath=path_to_zip)
           bpy.ops.preferences.addon_enable(module="animation_tool")"
           
           
