--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -35,9 +35,9 @@ jobs:
           /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
           import bpy
 
-          path_to_zip='/home/runner/work/github-trial/github-trial/'
+          path_to_zip='/home/runner/work/github-trial/github-trial/animation_tool.zip'
 
           bpy.ops.preferences.addon_install(filepath=path_to_zip)
-          bpy.ops.preferences.addon_enable(module="animation_tool")"
+          bpy.ops.preferences.addon_enable(module='animation_tool')"
           
           
