--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -24,9 +24,15 @@ jobs:
 
           blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
           
-          echo "SPACE"
-          cd blender-4.2.0-linux-x64/4.2/python/lib/site-packages
-          ls
+          pwd
+
+          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
+          import bpy
+
+          path_to_zip='/home/runner/work/github-trial/github-trial/animation_tool.zip'
+
+          bpy.ops.preferences.addon_install(filepath=path_to_zip)
+          bpy.ops.preferences.addon_enable(module='animation_tool')"
         
       - name: Download Animation Toop .zip file
         run: |
