--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -26,12 +26,10 @@ jobs:
           
           ls blender-4.2.0-linux-x64/4.2/python/lib/site-packages
 
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
+          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python "
           import bpy
 
-          path_to_zip='/home/runner/work/github-trial/github-trial/animation_tool.zip'
-
-          bpy.ops.preferences.addon_install(filepath=path_to_zip)
+          bpy.ops.preferences.addon_install(filepath='/home/runner/work/github-trial/github-trial/animation_tool.zip')
           bpy.ops.preferences.addon_enable(module='animation_tool')"
         
       
