--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -26,7 +26,7 @@ jobs:
           
           ls blender-4.2.0-linux-x64/4.2/python/lib/site-packages
 
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python "
+          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
           import bpy
 
           bpy.ops.preferences.addon_install(filepath='/home/runner/work/github-trial/github-trial/animation_tool.zip')
