--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -19,10 +19,12 @@ jobs:
         run: |
           pwd
 
-          #Update pip
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --upgrade pip
+          ls /blender-4.2.0-linux-x64/4.2/python/bin/
 
-          blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+          #Update pip
+          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip3 install --upgrade pip
+
+          blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip3 install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
           
           ls blender-4.2.0-linux-x64/4.2/python/lib/site-packages
           echo "BHAIAIIAAI"
