--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -21,10 +21,9 @@ jobs:
 
           ls /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/
 
-          #Update pip
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/python -m pip install --upgrade pip
+          
 
-          blender-4.2.0-linux-x64/4.2/python/bin/python -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+          python -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
           
           ls blender-4.2.0-linux-x64/4.2/python/lib/site-packages
           echo "BHAIAIIAAI"
