--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -19,11 +19,11 @@ jobs:
         run: |
           pwd
 
-          ls /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2/python/bin/
+          ls /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/4.2
 
           
 
-          python -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/site-packages" scipy
+          python -m pip install --target "blender-4.2.0-linux-x64/4.2/python3.11/lib/site-packages" scipy
           
           ls blender-4.2.0-linux-x64/4.2/python/lib/site-packages
           echo "BHAIAIIAAI"
