--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -20,7 +20,7 @@ jobs:
           pwd
 
           
-          python -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/python3.11/site-packages" scipy
+          blender-4.2.0-linux-x64/4.2/python/bin/pythyon3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/python3.11/site-packages" scipy
           
           /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
           import bpy
