--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -23,10 +23,9 @@ jobs:
           ls blender-4.2.0-linux-x64/4.2/python/bin/
           
           echo "2"
-          ls blender-4.2.0-linux-x64/4.2
+          ls blender-4.2.0-linux-x64/4.2/python
           
-          echo "3"
-          ls blender-4.2.0-linux-x64/4.2/python/lib
+          
           
           
         
