--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -23,7 +23,12 @@ jobs:
           ls blender-4.2.0-linux-x64/4.2/python/bin/
           
           echo "2"
-          ls blender-4.2.0-linux-x64/4.2/python/lib/
+          ls blender-4.2.0-linux-x64/4.2/python/lib/python3.11/
+          
+
+          echo "3"
+          ls blender-4.2.0-linux-x64/4.2/python/lib/libpython3.11.a
+
           
           
           
