--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -23,11 +23,8 @@ jobs:
           ls blender-4.2.0-linux-x64/4.2/python/bin/
           
           echo "2"
-          ls blender-4.2.0-linux-x64/4.2/python/lib/python3.11/
+          ls blender-4.2.0-linux-x64/4.2/python/lib/python3.11/site-packages/
           
-
-          echo "3"
-          ls blender-4.2.0-linux-x64/4.2/python/lib/libpython3.11.a
 
           
           
