--- a/.github/workflows/cylinder.yml
+++ b/.github/workflows/cylinder.yml
@@ -23,11 +23,16 @@ jobs:
           
           blender-4.2.0-linux-x64/4.2/python/bin/python3.11 -m pip install --target "blender-4.2.0-linux-x64/4.2/python/lib/python3.11/site-packages/" scipy
 
-          /home/runner/work/github-trial/github-trial/blender-4.2.0-linux-x64/blender  --background --python-expr "
+          blender-4.2.0-linux-x64/blender  --background --python-expr "
           import bpy
           bpy.ops.preferences.addon_install(filepath='/home/runner/work/github-trial/github-trial/animation_tool.zip')
           bpy.ops.preferences.addon_enable(module='animation_tool')
           "
+
+      - name: Run btest.py
+        run: |
+          python btest.py
+          
 
           
           
